--- a/HOME.html
+++ b/HOME.html
@@ -51,14 +51,8 @@
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li class="current"><a href="home.html" title="">Home</a></li>
-					<li class="has-children">
-						<a href="framework.html" title="">Framework</a>
-						<ul class="sub-menu">
-                  <li><a href="designethicallypt1.html">Designing Ethically Part 1</a></li>
-                  <li><a href="designethicallypt2.html">Designing Ethically Part 2</a></li>
-			         </ul>
-					</li>
-					<li><a href="toolkitREAL.html" title="">Toolkit</a></li>
+					<li><a href="framework.html" title="">Framework</a></li>
+					<li><a href="toolkit.html" title="">Toolkit</a></li>
 					<li><a href="casestudies.html" title="">Case Studies</a></li>
 					<li><a href="contact.html" title="">Contact</a></li>
 				</ul>
@@ -69,7 +63,7 @@
 				<form role="search" method="get" class="search-form" action="#">
 					<label>
 						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type Your Keywords" value="" name="s" title="Search for:" autocomplete="off">
+						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
 					</label>
 					<input type="submit" class="search-submit" value="Search">
 				</form>
@@ -96,39 +90,38 @@
 
    			<section>
 
-   				<div class="content-media">
-						<img src="images/thumbs/kz-header-10.png">
+          <div class="content-media">
+						<img src="images/kz-header-10.png">
 					</div>
 
 					<div class="primary-content">
 
-						<h1 class="entry-title add-bottom">It's time for designers to pave the way for ethical decision-making in tech.</h1>
 
-						<p class="lead">Lorem ipsum Nisi cillum reprehenderit minim sunt dolore dolor eiusmod eu aliquip ad ut sint dolore laborum voluptate ullamco dolore aliquip enim. Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing</p>
+						<p class="lead">The days of rechless tech need to come to an end.</p>
+            <p>Taking time to consider the ethical consequences behind decisions is necessary. There’s just too much at stake today with the complexity and reach of our accelerating, technological advances. There’s also the fact that we often don’t know what we don’t know…until it’s too late. We are at a point where technology is advancing so quickly that governing bodies cannot keep up. Any regulation we see today seems to happen after the fact, when the damage has already been done. While “regulation” may sound scary to companies, it has its place in society for a reason. If the government cannot catch up, then companies themselves need to shoulder some ethical responsibility and regulate themselves.</p>
 
-						<p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-						<p>Lorem ipsum Cillum sit sunt dolore non aute enim pariatur deserunt magna reprehenderit veniam officia ullamco eiusmod laborum commodo veniam elit proident enim sit cillum ex aliquip dolore labore sint ut deserunt officia veniam consectetur in in quis eu consectetur non sint Duis mollit Ut magna irure.</p>
 
-						<div class="row block-1-2 block-tab-full">
-							<div class="bgrid">
-								<h3>Who.</h3>
-								<p>Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu mollit nisi pariatur fugiat deserunt dolor veniam reprehenderit aliquip magna nisi consequat aliqua veniam in aute ullamco Duis laborum ad non pariatur sit.</p>
-							</div>
+              <div class="row block-1-2 block-tab-full">
+
+                <div class="bgrid">
+                  <h3>What.</h3>
+                  <p>This is your go-to resource on designing ethically. This framework lays down the theoretical and philosophical foundation and also provides a toolkit for you to implement the ideas presented here.</p>
+                </div>
+
+  							<div class="bgrid">
+  								<h3>Who.</h3>
+  								<p>This ethical design framework originated from a team of designers, product managers, consultants, and engineers from various tech companies who agreed that enough was enough.</p>
+  							</div>
 
 							<div class="bgrid">
 								<h3>When.</h3>
-								<p>Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu mollit nisi pariatur fugiat deserunt dolor veniam reprehenderit aliquip magna nisi consequat aliqua veniam in aute ullamco Duis laborum ad non pariatur sit.</p>
-							</div>
-
-							<div class="bgrid">
-								<h3>What.</h3>
-								<p>Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu mollit nisi pariatur fugiat deserunt dolor veniam reprehenderit aliquip magna nisi consequat aliqua veniam in aute ullamco Duis laborum ad non pariatur sit.</p>
+								<p>Now. We need designers in every step of their career to push for more ethical decision-making in their companies. There's already been extensive damage done, but it's not too late to work on reversing the current consequences.</p>
 							</div>
 
 							<div class="bgrid">
 								<h3>How.</h3>
-								<p>Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu mollit nisi pariatur fugiat deserunt dolor veniam reprehenderit aliquip magna nisi consequat aliqua veniam in aute ullamco Duis laborum ad non pariatur sit.</p>
+								<p>Aside from paying this knowledge forward, we encourage you to contribute to this framework. This is by no means set in stone - like our design process, this framework is meant to evolve and iterate. Your thoughts are welcome.</p>
 							</div>
 
 						</div>
