--- a/contact.html
+++ b/contact.html
@@ -50,14 +50,8 @@
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="home.html" title="">Home</a></li>
-					<li class="has-children">
-						<a href="framework.html" title="">Framework</a>
-						<ul class="sub-menu">
-			            <li><a href="designethicallypt1.html">Designing Ethically Part 1</a></li>
-			            <li><a href="designethicallypt2.html">Designing Ethically Part 2</a></li>
-			         </ul>
-					</li>
-					<li><a href="toolkitREAL.html" title="">Toolkit</a></li>
+					<li><a href="framework.html" title="">Framework</a></li>
+					<li><a href="toolkit.html" title="">Toolkit</a></li>
 					<li><a href="casestudies.html" title="">Case Studies</a></li>
 					<li class="current"><a href="contact.html" title="">Contact</a></li>
 				</ul>
@@ -68,7 +62,7 @@
 				<form role="search" method="get" class="search-form" action="#">
 					<label>
 						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type Your Keywords" value="" name="s" title="Search for:" autocomplete="off">
+						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
 					</label>
 					<input type="submit" class="search-submit" value="Search">
 				</form>
