--- a/designethicallypt2.html
+++ b/designethicallypt2.html
@@ -58,7 +58,7 @@
                 <li><a href="designethicallypt2.html">Designing Ethically Part 2</a></li>
                </ul>
           </li>
-          <li><a href="toolkitREAL.html" title="">Toolkit</a></li>
+          <li><a href="toolkit.html" title="">Toolkit</a></li>
           <li><a href="casestudies.html" title="">Case Studies</a></li>
           <li><a href="contact.html" title="">Contact</a></li>
         </ul>
@@ -69,7 +69,7 @@
 				<form role="search" method="get" class="search-form" action="#">
 					<label>
 						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type Your Keywords" value="" name="s" title="Search for:" autocomplete="off">
+						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
 					</label>
 					<input type="submit" class="search-submit" value="Search">
 				</form>
