--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="kz-favicon.ico" type="image/x-icon">
+	<link rel="icon" href="kz-favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -44,12 +44,12 @@
    	<div class="row header-content">
 
    		<div class="logo">
-	         <a href="home.html">Author</a>
+	         <a href="index.html">Author</a>
 	      </div>
 
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="home.html" title="">Home</a></li>
+					<li><a href="index.html" title="">Home</a></li>
 					<li><a href="framework.html" title="">Framework</a></li>
 					<li><a href="toolkit.html" title="">Toolkit</a></li>
 					<li><a href="casestudies.html" title="">Case Studies</a></li>
@@ -57,24 +57,25 @@
 				</ul>
 			</nav> <!-- end main-nav-wrap -->
 
-			<div class="search-wrap">
+      <!--
+      			<div class="search-wrap">
 
-				<form role="search" method="get" class="search-form" action="#">
-					<label>
-						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
-					</label>
-					<input type="submit" class="search-submit" value="Search">
-				</form>
+      				<form role="search" method="get" class="search-form" action="#">
+      					<label>
+      						<span class="hide-content">Search for:</span>
+      						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
+      					</label>
+      					<input type="submit" class="search-submit" value="Search">
+      				</form>
 
-				<a href="#" id="close-search" class="close-btn">Close</a>
+      				<a href="#" id="close-search" class="close-btn">Close</a>
 
-			</div> <!-- end search wrap -->
-
-			<div class="triggers">
-				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
-				<a class="menu-toggle" href="#"><span>Menu</span></a>
-			</div> <!-- end triggers -->
+      			</div>  end search wrap -->
+      <!--
+      			<div class="triggers">
+      				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
+      				<a class="menu-toggle" href="#"><span>Menu</span></a>
+      			</div>  end triggers -->
 
    	</div>
 
@@ -94,10 +95,10 @@
          </div>
 
 					<div class="primary-content">
-            
+
 						<h1 class="entry-title add-bottom">Get In Touch With Us.</h1>
 
-						<form name="cForm" id="cForm" method="post" action="">
+						<form name="cForm" id="cForm" method="post" action="mailto:contact@designethically.com">
 	  					   <fieldset>
 
 	                     <div class="form-field">
@@ -132,82 +133,13 @@
    <!-- footer
    ================================================== -->
    <footer>
-
-   	<div class="footer-main">
-
-   		<div class="row">
-
-	      	<div class="col-four tab-full mob-full footer-info">
-
-	            <h4>About Our Site</h4>
-
-	               <p>
-		          	Lorem ipsum Ut velit dolor Ut labore id fugiat in ut fugiat nostrud qui in dolore commodo eu magna Duis cillum dolor officia esse mollit proident Excepteur exercitation nulla. Lorem ipsum In reprehenderit commodo aliqua irure labore.
-		          	</p>
-
-		      </div> <!-- end footer-info -->
-
-	      	<div class="col-two tab-1-3 mob-1-2 site-links">
-
-	      		<h4>Site Links</h4>
-
-	      		<ul>
-	      			<li><a href="#">About Us</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-					</ul>
-
-	      	</div> <!-- end site-links -->
-
-	      	<div class="col-two tab-1-3 mob-1-2 social-links">
-
-	      		<h4>Social</h4>
-
-	      		<ul>
-	      			<li><a href="#">Twitter</a></li>
-						<li><a href="#">Facebook</a></li>
-						<li><a href="#">Dribbble</a></li>
-						<li><a href="#">Google+</a></li>
-						<li><a href="#">Instagram</a></li>
-					</ul>
-
-	      	</div> <!-- end social links -->
-
-	      	<div class="col-four tab-1-3 mob-full footer-subscribe">
-
-	      		<h4>Subscribe</h4>
-
-	      		<p>Keep yourself updated. Subscribe to our newsletter.</p>
-
-	      		<div class="subscribe-form">
-
-	      			<form id="mc-form" class="group" novalidate="true">
-
-							<input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="Type &amp; press enter" required="">
-
-			   			<input type="submit" name="subscribe" >
-
-		   				<label for="mc-email" class="subscribe-message"></label>
-
-						</form>
-
-	      		</div>
-
-	      	</div> <!-- end subscribe -->
-
-	      </div> <!-- end row -->
-
-   	</div> <!-- end footer-main -->
-
     <div class="footer-bottom">
       <div class="row">
 
         <div class="col-twelve">
           <div class="copyright">
-            <span>© Copyright Kat Zhou 2018</span>
-            <span>Design by <a href="http://www.katherinemzhou.com/">Kat Zhou</a></span>
+            <span>© Copyright &lt;Design Ethically&gt; 2018</span>
+            <span>Made by <a href="http://www.katherinemzhou.com/">Kat Zhou</a></span>
            </div>
 
            <div id="go-top">
