--- a/designethicallypt2.html
+++ b/designethicallypt2.html
@@ -29,8 +29,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="kz-favicon.ico" type="image/x-icon">
+  <link rel="icon" href="kz-favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -45,12 +45,12 @@
    	<div class="row header-content">
 
    		<div class="logo">
-	         <a href="home.html">Author</a>
+	         <a href="index.html">Author</a>
 	      </div>
 
       <nav id="main-nav-wrap">
         <ul class="main-navigation sf-menu">
-          <li><a href="home.html" title="">Home</a></li>
+          <li><a href="index.html" title="">Home</a></li>
           <li class="has-children current">
             <a href="framework.html" title="">Framework</a>
             <ul class="sub-menu">
@@ -64,25 +64,25 @@
         </ul>
       </nav> <!-- end main-nav-wrap -->
 
-			<div class="search-wrap">
+      <!--
+      			<div class="search-wrap">
 
-				<form role="search" method="get" class="search-form" action="#">
-					<label>
-						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
-					</label>
-					<input type="submit" class="search-submit" value="Search">
-				</form>
+      				<form role="search" method="get" class="search-form" action="#">
+      					<label>
+      						<span class="hide-content">Search for:</span>
+      						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
+      					</label>
+      					<input type="submit" class="search-submit" value="Search">
+      				</form>
 
-				<a href="#" id="close-search" class="close-btn">Close</a>
+      				<a href="#" id="close-search" class="close-btn">Close</a>
 
-			</div> <!-- end search wrap -->
-
-			<div class="triggers">
-				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
-				<a class="menu-toggle" href="#"><span>Menu</span></a>
-			</div> <!-- end triggers -->
-
+      			</div>  end search wrap -->
+      <!--
+      			<div class="triggers">
+      				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
+      				<a class="menu-toggle" href="#"><span>Menu</span></a>
+      			</div>  end triggers -->
    	</div>
 
    </header> <!-- end header -->
