--- a/framework3.html
+++ b/framework3.html
@@ -29,8 +29,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="kz-favicon.ico" type="image/x-icon">
+	<link rel="icon" href="kz-favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -45,12 +45,12 @@
    	<div class="row header-content">
 
    		<div class="logo">
-	         <a href="home.html">Author</a>
+	         <a href="index.html">Author</a>
 	      </div>
 
         <nav id="main-nav-wrap">
           <ul class="main-navigation sf-menu">
-            <li><a href="home.html" title="">Home</a></li>
+            <li><a href="index.html" title="">Home</a></li>
             <li class="current"><a href="framework.html" title="">Framework</a></li>
             <li><a href="toolkit.html" title="">Toolkit</a></li>
             <li><a href="casestudies.html" title="">Case Studies</a></li>
@@ -58,24 +58,25 @@
           </ul>
         </nav> <!-- end main-nav-wrap -->
 
-			<div class="search-wrap">
+        <!--
+        			<div class="search-wrap">
 
-				<form role="search" method="get" class="search-form" action="#">
-					<label>
-						<span class="hide-content">Search for:</span>
-						<input type="search" class="search-field" placeholder="Type Your Keywords" value="" name="s" title="Search for:" autocomplete="off">
-					</label>
-					<input type="submit" class="search-submit" value="Search">
-				</form>
+        				<form role="search" method="get" class="search-form" action="#">
+        					<label>
+        						<span class="hide-content">Search for:</span>
+        						<input type="search" class="search-field" placeholder="Type your keywords" value="" name="s" title="Search for:" autocomplete="off">
+        					</label>
+        					<input type="submit" class="search-submit" value="Search">
+        				</form>
 
-				<a href="#" id="close-search" class="close-btn">Close</a>
+        				<a href="#" id="close-search" class="close-btn">Close</a>
 
-			</div> <!-- end search wrap -->
-
-			<div class="triggers">
-				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
-				<a class="menu-toggle" href="#"><span>Menu</span></a>
-			</div> <!-- end triggers -->
+        			</div>  end search wrap -->
+        <!--
+        			<div class="triggers">
+        				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
+        				<a class="menu-toggle" href="#"><span>Menu</span></a>
+        			</div>  end triggers -->
 
    	</div>
 
@@ -94,23 +95,28 @@
 
 						<p>What happens if we apply this intent/results paradigm to our design process? What would that look like? The fact of the matter is that our current design processes do not actively encourage us to really consider the intent and results of what we create. And even if designers do have concerns about the two, oftentimes our voices are drowned out by the prioritized voices of shareholders. However, if we intentionally redesign our own process, perhaps we can enact more of an internally organic change and develop the wherewithal to defend our choices.</p>
 
-						<p><img src="images/kz-stanford.png" alt=""></p>
+          <figure>
+            <img src="images/kz-stanford.png" alt="Stanford">
+              <figcaption><a href="https://dschool.stanford.edu/">Stanford d.School</a>'s Design Thinking Process</figcaption>
+          </figure>
 
 
-						<p>Today, we see many design frameworks and processes that have been successful in defining north stars and outlining methods for delineating problems and developing solutions. What these frameworks share in common (when applied by businesses) is that they are often built on a motivating foundation of making more profits.
+
+				<p>Today, we see many design frameworks and processes that have been successful in defining north stars and outlining methods for delineating problems and developing solutions. What these frameworks share in common (when applied by businesses) is that they are often built on a motivating foundation of making more profits.
 Rarely do you see an ethical component factored into the equation. I would argue that it is imperative for anyone in a decision-making role to prioritize ethical considerations. Companies today are so large and unwieldy that there can be disastrous consequences if they do not validate the ethical consequences of their actions.
 By applying the intent/results paradigm to the typical design process, we have a new, in-depth process that proactively seeks to 1) evaluate the ethical validity of the selected problem and 2) ensure that the designed solution is not ethically unsound.</p>
 
+
             <p><img src="images/kz-redesigned.png" alt=""></p>
 
-            <p>You’ll see that there are a few new steps integrated into this model. I’ll go into a bit more detail on the new steps but as for the original steps, they can be found in Stanford d.school’s Design Thinking process.</p>
+            <p>You’ll see that there are a few new steps integrated into this model. I’ll go into a bit more detail on the new steps but as for the original steps, they can be found in <a href="https://dschool-old.stanford.edu/sandbox/groups/designresources/wiki/36873/attachments/74b3d/ModeGuideBOOTCAMP2010L.pdf">Stanford d.school’s Design Thinking process</a>.</p>
             <h2> Intents Phase - New Steps </h2>
-            <p>Evaluate: This step is critical and involves analyzing the problem statement seeing it if it is even ethically worthy of being addressed. For example, if your company is trying to develop a tool to hurt thousands of people for the sake of advancing some agenda, you might want to heavily reconsider.</p>
+            <p><b>Evaluate:</b> This step is critical and involves analyzing the problem statement seeing it if it is even ethically worthy of being addressed. For example, if your company is trying to develop a tool to hurt thousands of people for the sake of advancing some agenda, you might want to heavily reconsider.</p>
             <p>The thing is, most companies will have crafted a pitch for their product that seems ethically sound. That’s how they convince venture capitalists to invest and how they get users to jump on board. It’s normally in the results phase where things go haywire. In general, the intents phase is rarely the problematic part, but it always is good to have a system of checks and balances in case defining an ethical problem statement is not obvious.</p>
             <h2>Results Phase - New Steps </h2>
-            <p>Forecast: Take a look at the ideas you’ve generated with your team. For each idea, figure out any ethical weak spots or any potential ways that your product can be exploited in an unethical way (either by users, the company itself, investors, etc.).</p>
-            <p>Ship: After you’ve tested your product thoroughly, send it out! This is by no means a novel step, but just serves to indicate that this framework looks beyond the scope of the traditional process.</p>
-            <p>Monitor: Almost as crucial as forecasting, monitoring is simply the act of continually checking in with your shipped product to see if any ethical problems occur so your team can quickly mobilize to solve them.</p>
+            <p><b>Forecast:</b> Take a look at the ideas you’ve generated with your team. For each idea, figure out any ethical weak spots or any potential ways that your product can be exploited in an unethical way (either by users, the company itself, investors, etc.).</p>
+            <p><b>Ship:</b> After you’ve tested your product thoroughly, send it out! This is by no means a novel step, but just serves to indicate that this framework looks beyond the scope of the traditional process.</p>
+            <p><b>Monitor:</b> Almost as crucial as forecasting, monitoring is simply the act of continually checking in with your shipped product to see if any ethical problems occur so your team can quickly mobilize to solve them.</p>
             <p>This framework is not meant to guarantee perfection. Mistakes will be made. But a significantly higher percentage of them will be caught before they can wreak havoc. The iterative nature of the design process as it is allows for designers to refine the way they evaluate, forecast, and monitor. Furthermore, this ethical design framework will introduce a necessary way of thinking twice (or thrice) before acting…something that the tech world seems to have forgotten.</p>
 
 
@@ -139,82 +145,13 @@ By applying the intent/results paradigm to the typical design process, we have a
    <!-- footer
    ================================================== -->
    <footer>
-
-   	<div class="footer-main">
-
-   		<div class="row">
-
-	      	<div class="col-four tab-full mob-full footer-info">
-
-	            <h4>About Our Site</h4>
-
-	               <p>
-		          	Lorem ipsum Ut velit dolor Ut labore id fugiat in ut fugiat nostrud qui in dolore commodo eu magna Duis cillum dolor officia esse mollit proident Excepteur exercitation nulla. Lorem ipsum In reprehenderit commodo aliqua irure labore.
-		          	</p>
-
-		      </div> <!-- end footer-info -->
-
-	      	<div class="col-two tab-1-3 mob-1-2 site-links">
-
-	      		<h4>Site Links</h4>
-
-	      		<ul>
-	      			<li><a href="#">About Us</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-					</ul>
-
-	      	</div> <!-- end site-links -->
-
-	      	<div class="col-two tab-1-3 mob-1-2 social-links">
-
-	      		<h4>Social</h4>
-
-	      		<ul>
-	      			<li><a href="#">Twitter</a></li>
-						<li><a href="#">Facebook</a></li>
-						<li><a href="#">Dribbble</a></li>
-						<li><a href="#">Google+</a></li>
-						<li><a href="#">Instagram</a></li>
-					</ul>
-
-	      	</div> <!-- end social links -->
-
-	      	<div class="col-four tab-1-3 mob-full footer-subscribe">
-
-	      		<h4>Subscribe</h4>
-
-	      		<p>Keep yourself updated. Subscribe to our newsletter.</p>
-
-	      		<div class="subscribe-form">
-
-	      			<form id="mc-form" class="group" novalidate="true">
-
-							<input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="Type &amp; press enter" required="">
-
-			   			<input type="submit" name="subscribe" >
-
-		   				<label for="mc-email" class="subscribe-message"></label>
-
-						</form>
-
-	      		</div>
-
-	      	</div> <!-- end subscribe -->
-
-	      </div> <!-- end row -->
-
-   	</div> <!-- end footer-main -->
-
       <div class="footer-bottom">
       	<div class="row">
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright Kat Zhou 2018</span>
-		         	<span>Design by <a href="http://www.katherinemzhou.com/">Kat Zhou</a></span>
+              <span>© Copyright &lt;Design Ethically&gt; 2018</span>
+		         	<span>Made by <a href="http://www.katherinemzhou.com/">Kat Zhou</a></span>
 		         </div>
 
 		         <div id="go-top">
